--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=8005
-DATABASE=mongodb+srv://iamfaridansari:%40n$aR!2199@cluster0.96yz05v.mongodb.net/sml_lead_activity
+DATABASE=mongodb://admin:Admin%40123@27.107.190.198:27017/sml-lead-activity-form?authSource=admin
 
 REFRESH_TOKEN=1000.534c75a1b7d073d6cf25a66cfbb29ea9.b1f8fe86c3c4aafc22eb302de503275c
 CLIENT_ID=1000.FJVT66QNSRUXJOLZEYRRVUOAKP064T
